@@ -1,18 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 DIST riddle-1.0.10.gem 35840 RMD160 b351d0d3f3a7e2909995d2f67ecb7f3d01d39267 SHA1 721a6a6e099ff2540f9a1c4cb2fef900bb8ee84a SHA256 85acd0e12fca884b1d61006d6f77a0fb5de379aea4686784a2ad379856080919
-DIST riddle-1.0.6.gem 35328 RMD160 6c44b96e8ad577b60e9d14f155147ea33539b5b7 SHA1 7a36d1ac067458a3c473f95e7faea838910cde39 SHA256 12a88c3ccf29f9dc5eda3b704a063b57d6707233886d0843811b6ae224985825
-DIST riddle-1.0.8.gem 35328 RMD160 44d95f2b786bfbc557043f3f2d7180594bf780d5 SHA1 d848b089664d4de501039afa497caf864f997141 SHA256 72d6d7c7dd612c457d25854180793af57f5a8e42701ddd44df585388866289c1
 EBUILD riddle-1.0.10.ebuild 646 RMD160 a9f66e201051c4b461d37eb12e18dcdb8c552e74 SHA1 f056682fe8e3f866adc475a15761de240d4ab213 SHA256 32bf8dd93f437d014f7f58fe996a2db58d390820a0bb631bacefab1ecd2513f3
-EBUILD riddle-1.0.6.ebuild 406 RMD160 75163becfa312d8f6f88256c0af60fbc5e93ed16 SHA1 87a81150910579bc6cd3b57e47729c7be8489f39 SHA256 fed283e7378d3aee94c1fc68a02a950a71f8a753a3d34c968894f9de9c2dd4a5
-EBUILD riddle-1.0.8.ebuild 406 RMD160 75163becfa312d8f6f88256c0af60fbc5e93ed16 SHA1 87a81150910579bc6cd3b57e47729c7be8489f39 SHA256 fed283e7378d3aee94c1fc68a02a950a71f8a753a3d34c968894f9de9c2dd4a5
-MISC ChangeLog 592 RMD160 9cd4e86377a21715b6c43f710bbb9e070803767b SHA1 cb5eb8e2a5df27855fc67b375b3f3c7a9924a74b SHA256 b224fd6cb7e4d06377f6682604866c12c351af3b26cbab957a099d49eab9635c
+MISC ChangeLog 712 RMD160 4729d26f29594500f533b2f2f8720a3ef6889a31 SHA1 825e9491a2e4f15060f384f732a576cf37b716fe SHA256 6e9499aeaac368bcd4b3890c5136f3c7f12aabd68ea51bf448e3b71930ec8a25
 MISC metadata.xml 201 RMD160 bbf7920d9809941fb024d20016dbe2fb9f15ff97 SHA1 e629d21795e99a77bd0a6aded1a153fd12d5b2c5 SHA256 c90b12c6600840878686d4544dbc51d97b0715add76b40d9400415cdef6324ad
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkuDgNsACgkQeM7EJeUH71PdPACdH9whP3pGg9cUMJ2vZ4ghgoVj
-NFEAn1KcPLnHZlAZgZxDOMUrO4WKvIru
-=qSKs
+iF4EAREIAAYFAkxazcUACgkQZihJkut28SudRwD9HjnRUKd8FtiNi9q4/nAbcEw/
+ch28aPBIwhjQXpmLfZUBAJfwou9TnBV9ypQPaB75vFFRS2ejVtAJk9vGEYQzI8GW
+=liVN
 -----END PGP SIGNATURE-----
