@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  05 Aug 2010; Hans de Graaff <graaff@gentoo.org> -riddle-1.0.6.ebuild,
+  -riddle-1.0.8.ebuild:
+  Remove old versions.
+
 *riddle-1.0.10 (23 Feb 2010)
 
   23 Feb 2010; Hans de Graaff <graaff@gentoo.org> +riddle-1.0.10.ebuild:
